fixed display overflow, optimized dark-light toggle

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -93,7 +93,7 @@ input:checked + .slider:before {
   text-align: right;
   padding-top: 25%;
   padding-right: 10%;
-  font-size: 40px;
+  font-size: 30px;
   padding-bottom: 5%;
 }
 .keypad_row {
